crates/aranya-policy-compiler/tests/data/actions/return_in_infallible_action.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: cannot return from an infallible action; declare a `result[unit, E]` return type
  |
3 |     return Ok(0)
  |            ^^^^^
